--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./Main.jsx" type="module"></script>
+    <script src="./Main.tsx" type="module"></script>
   </body>
 </html>
